# hexlet-flask-example

./: Makefile  example.py  example1.py  pyproject.toml  user_repository.py  users.json
templates/users/: index.html  layout.html  show.html
